# Vocalis

./: .gitignore  AGENTS.md  Makefile  README.md  SKILL.md  config.yaml  pyproject.toml  requirements.txt
assets/texts/: library.yaml
docs/: competitive_research.md
scripts/: cache_manager.py  config_loader.py  generate_mock_history.py  history.py  main.py  plot_progress.py  reporter.py  scorer.py  test_charts.py  text_library.py  transcriber.py  tts_provider.py
tests/: conftest.py  test_config_loader.py  test_history.py  test_scorer.py  test_word_aligner.py
